# orbital

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SPEC.md  hooks.py  mkdocs.yml  pyproject.toml  sonar-project.properties
.claude/: settings.json  settings.local.json
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  pages.yml  release.yml  semgrep.yml
deploy/auth/: auth-stack.yaml.tmpl  setup-auth.sh
deploy/base-image/: Dockerfile
deploy/base-image/static/: nginx.conf
deploy/chart/orbital/: Chart.yaml  values.yaml
deploy/chart/streamlit-host/: Chart.yaml  values.yaml
deploy/minikube/: setup.sh
docs/: ADMIN.md  API.md  DEVELOPMENT.md  INSTALL.md  SPEC.md  UI-SPEC.md  USER.md  index.html  robots.txt
docs/stylesheets/: extra.css
src/orbital/: config.py  db.py  groups.py  logbuffer.py  main.py  models.py  schemas.py
src/orbital/api/: admin.py  apps.py  auth.py  authz.py  security.py  tokens.py  wake.py  webhooks.py
src/orbital/k8s/: builder.py  client.py  inspect.py  metrics.py  reconciler.py  resources.py  scanner.py  scripts.py
src/orbital/templates/: dashboard.html
src/streamlit_host/: activity.py  analytics.py  config.py  db.py  gitutil.py  groups.py  main.py  models.py  schemas.py
src/streamlit_host/api/: apps.py  auth.py  authz.py  security.py  wake.py  webhooks.py
src/streamlit_host/k8s/: builder.py  inspect.py  metrics.py  (+3 more)
tests/: test_admin.py  test_analytics.py  test_api.py  test_auth_oidc.py  test_authz.py  test_config.py  test_db.py  test_detect.py  test_gc_orphaned_resources.py  test_git_poll.py  test_gitutil.py  test_groups.py  test_hibernation.py  test_metrics.py  test_rbac.py  test_routing.py  test_scan.py  test_security.py  test_static_apps.py  test_stuck_build.py  test_tokens.py
ui/: Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.ts
ui/src/: theme.ts
(+79 files in other folders)
