[project]
name = "orbital"
version = "0.1.0"
description = "Self-hosted Streamlit hosting platform on Kubernetes"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.14.2",
    "kubernetes>=36.0.3",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "pyjwt[crypto]>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/orbital"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
